--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="format-detection" content="telephone=no">
     <title>线上报修</title>
     <meta name="description" content="江南大学团通社电子技术部线上报修"/>
-    <link rel="icon" href="../static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
-    <link rel="stylesheet" href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
-    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}"/>
-    <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}  "></script>
+    <link rel="icon" href="./static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
+    <link rel="stylesheet" href="./static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
+    <link rel="stylesheet" href="./static/css/style.css" th:href="@{/css/style.css}"/>
+    <script src="./static/layui/layui.js" th:src="@{/layui/layui.js}  "></script>
 </head>
 
 <body class="layui-anim layui-anim-fadein">
@@ -29,7 +29,7 @@
 
     <div class="layui-container">
         <div style="float: left;margin-top: 15px">
-            <img src="../static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px">
+            <img src="./static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px">
         </div>
 
         <div style="float: right; margin-top: 15px">
