--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     let photoProcessing = false;
     let posting = false;
     let photoCount = 0;
-    let projectName = ""
+    let projectName = "https://www.jiangnan-dzjsb.club:444"
 
 </script>
 <div class="layui-header header">
