--- a/notice.html
+++ b/notice.html
@@ -10,10 +10,10 @@
     <title>线上报修已暂停</title>
     <meta name="description" content="江南大学团通社电子技术部线上报修"/>
 
-    <link rel="icon" href="../static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
-    <link rel="stylesheet" href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
-    <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}"/>
+    <link rel="icon" href="./static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
+    <link rel="stylesheet" href="./static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
+    <script src="./static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+    <link rel="stylesheet" href="./static/css/style.css" th:href="@{/css/style.css}"/>
 </head>
 
 <body class="layui-anim layui-anim-fadein">
@@ -21,7 +21,7 @@
 
     <div class="layui-container">
         <div style="float: left; margin-top: 15px">
-            <img src="../static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px" alt="">
+            <img src="./static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px" alt="">
         </div>
 
         <div style="float: right; margin-top: 15px">
