--- a/register.html
+++ b/register.html
@@ -8,21 +8,21 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="江南大学团通社电子技术部用户注册"/>
     <title>线上报修系统用户注册</title>
-    <link rel="icon" href="../static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
-    <link rel="stylesheet" href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
-    <link rel="stylesheet" href="../static/css/style.css" th:href="@{/css/style.css}"/>
-    <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-    <script src="../static/js/jquery-3.4.1.js" th:src="@{/js/jquery-3.4.1.js}"></script>
+    <link rel="icon" href="./static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
+    <link rel="stylesheet" href="./static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
+    <link rel="stylesheet" href="./static/css/style.css" th:href="@{/css/style.css}"/>
+    <script src="./static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+    <script src="./static/js/jquery-3.4.1.js" th:src="@{/js/jquery-3.4.1.js}"></script>
 </head>
 <body class="layui-anim layui-anim-fadein">
 <script type="text/javascript">
-    let projectName = ""
+    let projectName = "https://www.jiangnan-dzjsb.club:444"
 </script>
 <div class="layui-header header">
 
     <div class="layui-container">
         <div style="float: left; margin-top: 15px">
-            <img src="../static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px" alt="">
+            <img src="./static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px" alt="">
         </div>
 
         <div style="float: right; margin-top: 15px">
@@ -77,7 +77,7 @@
                             <a style="font-style: italic" href="https://www.lanzous.com/b00e3ea4b">>接单APP（安卓端）</a>
                         </p>
                         <p class="notification-box-p" style="font-style: italic">>微信小程序（如果是安卓用户强烈建议使用上面的APP）</p>
-                        <img style="height: 200px;width: 200px" src="../static/images/wx.jpg"
+                        <img style="height: 200px;width: 200px" src="./static/images/wx.jpg"
                              th:src="@{/images/wx.jpg}">
                         <p class="notification-box-p">在使用过程中，对报修系统有任何问题或想法欢迎提出来</p>
                     </div>
