增加检查服务状态，增加error页面

--- a/error.html
+++ b/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cmn-Hans" xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html lang="zh-cmn-Hans">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport"
@@ -7,13 +7,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="format-detection" content="telephone=no">
 
-    <title>线上报修已暂停</title>
+    <title>线上报修服务不可用</title>
     <meta name="description" content="江南大学团通社电子技术部线上报修"/>
 
-    <link rel="icon" href="./static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
-    <link rel="stylesheet" href="./static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
-    <script src="./static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-    <link rel="stylesheet" href="./static/css/style.css" th:href="@{/css/style.css}"/>
+    <link rel="icon" href="./static/images/logo.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="./static/layui/css/layui.css"/>
+    <script src="./static/layui/layui.js"></script>
+    <link rel="stylesheet" href="./static/css/style.css"/>
 </head>
 
 <body class="layui-anim layui-anim-fadein">
@@ -21,7 +21,7 @@
 
     <div class="layui-container">
         <div style="float: left; margin-top: 15px">
-            <img src="./static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px" alt="">
+            <img src="./static/images/logo.png" style="width: 40px" alt="">
         </div>
 
         <div style="float: right; margin-top: 15px">
@@ -38,13 +38,13 @@
 
         <div style="margin-top: 15px">
             <div style="margin-top: 20px; text-align: center">
-                <p style="font-size: 20px">通 知</p>
+                <p style="font-size: 20px">注 意</p>
             </div>
         </div>
 
         <div style="margin: 10px auto">
-            <p style="text-indent: 2em; line-height: 2em">因考试或假期暂停报修服务，敬请谅解。</p>
-            <p style="text-indent: 2em; line-height: 2em">报修系统将于考试结束或开学后重新开启。</p>
+            <p style="text-indent: 2em; line-height: 2em">因服务器被外星人抢走，线上报修服务暂时不可用</p>
+            <p style="text-indent: 2em; line-height: 2em">我们将尽快修复报修，感谢您的理解</p>
             <p style="text-indent: 2em; line-height: 2em">你也可以先加入我们的线上交流群，我们的同学们有时间了会尽快帮你解决问题。</p>
             <p style="line-height: 2em">
                 线上交流QQ群：459121889。 <a
