--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-cmn-Hans" xmlns:th="http://www.springframework.org/schema/data/jaxb">
+<html lang="zh-cmn-Hans">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -8,10 +8,10 @@
     <meta name="format-detection" content="telephone=no">
     <title>线上报修</title>
     <meta name="description" content="江南大学团通社电子技术部线上报修"/>
-    <link rel="icon" href="./static/images/logo.png" th:href="@{/images/logo.png}" type="image/x-icon"/>
-    <link rel="stylesheet" href="./static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"/>
-    <link rel="stylesheet" href="./static/css/style.css" th:href="@{/css/style.css}"/>
-    <script src="./static/layui/layui.js" th:src="@{/layui/layui.js}  "></script>
+    <link rel="icon" href="./static/images/logo.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="./static/layui/css/layui.css"/>
+    <link rel="stylesheet" href="./static/css/style.css"/>
+    <script src="./static/layui/layui.js"></script>
 </head>
 
 <body class="layui-anim layui-anim-fadein">
@@ -22,14 +22,35 @@
     let photoProcessing = false;
     let posting = false;
     let photoCount = 0;
-    let projectName = "https://www.mjz-aiot.top:444"
+    let projectName = "https://www.mjz-aiot.top:444";
+
+    let httpRequest = new XMLHttpRequest();
+    httpRequest.open('POST', "https://www.mjz-aiot.top:444/state/checkService?type=repair", true);
+    httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+    httpRequest.send();
+    httpRequest.onreadystatechange = function () {//请求后的回调接口，可将请求成功后要执行的程序写在其中
+        if (httpRequest.readyState === 4 && httpRequest.status === 200) {//验证请求是否发送成功
+            let responseText = JSON.parse(httpRequest.responseText);
+            if (responseText.error === 1) {
+                if (!responseText.body) {
+                    window.location = "./notice.html";
+                }else {
+                    window.location = "./error.html";
+                }
+            } else {
+                window.location = "./error.html";
+            }
+        } else if (httpRequest.status !== 200) {
+            window.location = "./error.html";
+        }
+    };
 
 </script>
 <div class="layui-header header">
 
     <div class="layui-container">
         <div style="float: left;margin-top: 15px">
-            <img src="./static/images/logo.png" th:src="@{/images/logo.png}" style="width: 40px">
+            <img src="./static/images/logo.png" style="width: 40px">
         </div>
 
         <div style="float: right; margin-top: 15px">
