更新API接口，重定向改为window.location.replace(url)，地址栏不能前进后退

--- a/error.html
+++ b/error.html
@@ -43,8 +43,8 @@
         </div>
 
         <div style="margin: 10px auto">
-            <p style="text-indent: 2em; line-height: 2em">因服务器被外星人抢走，线上报修服务暂时不可用</p>
-            <p style="text-indent: 2em; line-height: 2em">我们将尽快修复报修，感谢您的理解</p>
+            <p style="text-indent: 2em; line-height: 2em">因受到外星人干扰，线上报修服务暂时不可用</p>
+            <p style="text-indent: 2em; line-height: 2em">我们将尽快恢复报修，感谢您的理解</p>
             <p style="text-indent: 2em; line-height: 2em">你也可以先加入我们的线上交流群，我们的同学们有时间了会尽快帮你解决问题。</p>
             <p style="line-height: 2em">
                 线上交流QQ群：459121889。 <a
