--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     let photoProcessing = false;
     let posting = false;
     let photoCount = 0;
-    let projectName = "https://www.mjz-aiot.top:444";
+    let HOST = "https://www.10000hours.love:444";
 
     let httpRequest = new XMLHttpRequest();
-    httpRequest.open('POST', "https://www.mjz-aiot.top:444/state/checkService?type=repair", true);
+    httpRequest.open('POST', HOST + "/state/checkService?type=repair", true);
     httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
     httpRequest.send();
     httpRequest.onreadystatechange = function () {//请求后的回调接口，可将请求成功后要执行的程序写在其中
@@ -33,15 +33,15 @@
             let responseText = JSON.parse(httpRequest.responseText);
             if (responseText.error === 1) {
                 if (!responseText.body) {
-                    window.location = "./notice.html";
-                }else {
-                    window.location = "./error.html";
+                    window.location.replace("./notice.html");
+                } else {
+                    window.location.replace("./error.html");
                 }
             } else {
-                window.location = "./error.html";
+                window.location.replace("./error.html");
             }
-        } else if (httpRequest.status !== 200) {
-            window.location = "./error.html";
+        } else {
+            window.location.replace("./error.html");
         }
     };
 
@@ -200,15 +200,15 @@
                     <select name="College" id="College" required>
                         <option></option>
                         <option>物联网工程学院</option>
+                        <option>人工智能与计算机学院</option>
                         <option>设计学院</option>
                         <option>商学院</option>
                         <option>机械学院</option>
                         <option>环境与土木学院</option>
                         <option>食品学院</option>
-                        <option>纺织服装学院</option>
+                        <option>纺织科学与工程学院</option>
                         <option>药学院</option>
                         <option>外国语学院</option>
-                        <option>数字媒体学院</option>
                         <option>生物工程学院</option>
                         <option>化学与材料工程学院</option>
                         <option>理学院</option>
@@ -217,6 +217,8 @@
                         <option>法学院</option>
                         <option>马克思主义学院</option>
                         <option>北美学院</option>
+                        <option>纺织服装学院</option>
+                        <option>数字媒体学院</option>
                     </select>
                 </div>
             </div>
@@ -288,7 +290,7 @@
                             for (let i = 0; i < photoCount; i++) {
                                 formData.append("photo", photoFile[i]);
                             }
-                            post(projectName + "/data/insert",
+                            post(HOST + "/data/insert",
                                 formData,
                                 function success(httpRequest, result) {
                                     // console.log(result);
