--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
     httpRequest.open('POST', HOST + "/state/checkService?type=repair", true);
     httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
     httpRequest.send();
-    httpRequest.onreadystatechange = function () {//请求后的回调接口，可将请求成功后要执行的程序写在其中
-        if (httpRequest.readyState === 4 && httpRequest.status === 200) {//验证请求是否发送成功
+    httpRequest.onreadystatechange = function () {
+        if (httpRequest.readyState === 4 && httpRequest.status === 200) {
             let responseText = JSON.parse(httpRequest.responseText);
             if (responseText.error === 1) {
                 if (!responseText.body) {
                     window.location.replace("./notice.html");
-                } else {
-                    window.location.replace("./error.html");
                 }
             } else {
                 window.location.replace("./error.html");
