--- a/notice.html
+++ b/notice.html
@@ -17,6 +17,30 @@
 </head>
 
 <body class="layui-anim layui-anim-fadein">
+<script type="text/javascript">
+
+    let HOST = "https://www.10000hours.love:444";
+
+    let httpRequest = new XMLHttpRequest();
+    httpRequest.open('POST', HOST + "/state/checkService?type=repair", true);
+    httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+    httpRequest.send();
+    httpRequest.onreadystatechange = function () {
+        if (httpRequest.readyState === 4 && httpRequest.status === 200) {
+            let responseText = JSON.parse(httpRequest.responseText);
+            if (responseText.error === 1) {
+                if (responseText.body) {
+                    window.location.replace("./index.html");
+                }
+            } else {
+                window.location.replace("./error.html");
+            }
+        } else {
+            window.location.replace("./error.html");
+        }
+    };
+
+</script>
 <div class="layui-header header">
 
     <div class="layui-container">
