修改跳转到error.html的判断条件

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             } else {
                 window.location.replace("./error.html");
             }
-        } else {
+        } else if(httpRequest.readyState !== 4){
             window.location.replace("./error.html");
         }
     };
