--- a/notice.html
+++ b/notice.html
@@ -35,7 +35,7 @@
             } else {
                 window.location.replace("./error.html");
             }
-        } else {
+        }  else if(httpRequest.readyState !== 4){
             window.location.replace("./error.html");
         }
     };
