--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
     httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
     httpRequest.send();
     httpRequest.onreadystatechange = function () {
-        if (httpRequest.readyState === 4 && httpRequest.status === 200) {
+        if (httpRequest.status === 200) {
             let responseText = JSON.parse(httpRequest.responseText);
             if (responseText.error === 1) {
+				console.log(responseText.body)
                 if (!responseText.body) {
-                    window.location.replace("./notice.html");
+					window.location.replace("./notice.html");
                 }
             } else {
                 window.location.replace("./error.html");
             }
-        } else if(httpRequest.readyState !== 4){
+        } else {
             window.location.replace("./error.html");
         }
     };
