--- a/notice.html
+++ b/notice.html
@@ -26,7 +26,7 @@
     httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
     httpRequest.send();
     httpRequest.onreadystatechange = function () {
-        if (httpRequest.readyState === 4 && httpRequest.status === 200) {
+        if (httpRequest.status === 200) {
             let responseText = JSON.parse(httpRequest.responseText);
             if (responseText.error === 1) {
                 if (responseText.body) {
@@ -35,7 +35,7 @@
             } else {
                 window.location.replace("./error.html");
             }
-        }  else if(httpRequest.readyState !== 4){
+        }  else {
             window.location.replace("./error.html");
         }
     };
