更新API，服务端部署到了疫情期间在阿里云白嫖的esc上，缓解轻量云服务器的压力

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     let photoProcessing = false;
     let posting = false;
     let photoCount = 0;
-    let HOST = "https://www.10000hours.love:444";
+    let HOST = "https://esc.10000hours.love:444";
 
     let httpRequest = new XMLHttpRequest();
     httpRequest.open('POST', HOST + "/state/checkService?type=repair", true);
