--- a/notice.html
+++ b/notice.html
@@ -19,7 +19,7 @@
 <body class="layui-anim layui-anim-fadein">
 <script type="text/javascript">
 
-    let HOST = "https://www.10000hours.love:444";
+    let HOST = "https://ecs.10000hours.love:444";
 
     let httpRequest = new XMLHttpRequest();
     httpRequest.open('POST', HOST + "/state/checkService?type=repair", true);
